# yuugen

./: '  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  yuugen.ini
Source/AudioCommon/: AudioInterface.h  CMakeLists.txt  SDLAudioInterface.cpp
Source/Core/: CMakeLists.txt  Core.cpp  Core.h  EmulatorThread.cpp  EmulatorThread.h  Scheduler.cpp  Scheduler.h  System.cpp  System.h  core.cpp  core.h  system.cpp  system.h
Source/Core/ARM/: CPU.cpp  CPU.h  CPUBase.cpp  CPUBase.h  CPUTypes.h  CoprocessorBase.h  Decoder.h  ExecutorInterface.h  MMIO.h  MemoryBase.h  Watchpoints.cpp  Watchpoints.h  cpu_core.cpp  cpu_core.h  memory_base.h
Source/Core/ARM copy/: cpu_core.h  memory_base.h
Source/Core/Hardware/: DMA.cpp  DMA.h  IPC.cpp  IPC.h  Input.cpp  Input.h  MathsUnit.cpp  MathsUnit.h  RTC.cpp  RTC.h  SPI.cpp  SPI.h  SPU.cpp  SPU.h  Timers.cpp  Timers.h
Source/Core/arm/: ARMTypes.cpp  ARMTypes.h  HLESoftwareInterrupts.cpp  MMIO.h  cpu_core.cpp  cpu_core.h  memory_base.h
Source/Core/scheduler/: scheduler.cpp
src/: CMakeLists.txt
src/AudioCommon/: AudioInterface.h  CMakeLists.txt  SDLAudioInterface.cpp  SDLAudioInterface.h
src/Common/: CMakeLists.txt  GPUTypes.h  GamesList.cpp  Memory.h  Settings.cpp  Settings.h  StringHelpers.cpp  Types.h  arithmetic.h  circular_buffer.h  log_file.h  lut_helpers.h  memory_helpers.h
src/Core/: CMakeLists.txt  config.cpp  config.h  core.cpp  core.h  system.cpp  system.h
src/Core/arm/: cpu_core.cpp  cpu_core.h  memory_base.h
src/Core/scheduler/: scheduler.cpp  scheduler.h
src/VideoBackends2D/: CMakeLists.txt
src/VideoBackends2D/Software/: Extended.cpp  Object.cpp  SoftwareRenderer2D.cpp  SoftwareRenderer2D.h  Text.cpp  TileDecoder.cpp
src/VideoBackends3D/: CMakeLists.txt
src/VideoBackends3D/Software/: Interpolator.h  SoftwareRenderer3D.cpp  SoftwareRenderer3D.h  TextureDecoder.cpp  TextureSampler.cpp
src/VideoCommon/: CMakeLists.txt  GLWindow.cpp  GPU.cpp  GPU.h  GeometryCommands.cpp  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  VRAM.h  VRAMPage.h  VRAMRegion.h
src/arm/: CMakeLists.txt  arch.h  arithmetic.cpp  arithmetic.h  config.h  coprocessor.h  cpu.h  decoder.h  instructions.h  memory.h  null_coprocessor.h  page_table.h  state.h  virtual_page_table.h
src/arm/disassembler/: arm.cpp  disassembler.cpp  disassembler.h  thumb.cpp
src/arm/interpreter/: interpreter.cpp  interpreter.h
src/arm/ir_interpreter/: ir_interpreter.cpp  ir_interpreter.h
src/arm/jit/: basic_block.h  block_cache.h  config.h  jit.cpp  jit.h  location.h  translator.cpp  translator.h
src/arm/jit_common/: basic_block.h  block_cache.h  jit.cpp  jit.h
src/audio_common/: CMakeLists.txt  audio_interface.h
src/audio_common/sdl/: audio_interface.cpp  audio_interface.h
src/common/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  GPUTypes.h  GamesList.cpp  GamesList.h  Memory.h  StringHelpers.cpp  StringHelpers.h  arithmetic.h  audio_device.h  backup.h  bits.h  callback.h  circular_buffer.h  config.h  emu_core.h  filesystem.cpp  filesystem.h  format.h  games_list.cpp  games_list.h  input_device.h  log.h  log_file.cpp  log_file.h  logger.cpp  logger.h  matrix.h  matrix_stack.h  mem_helpers.h  memory.h  memory_helpers.h  memory_mapped_file.h  page_table.h  platform.h  polygon.h  regular_file.cpp  regular_file.h  ring_buffer.h  (+10 more)
src/core/: CMakeLists.txt  arm.cpp  arm.h  arm_alu.inl  arm_branch.inl  arm_transfer.inl  cartridge.cpp  cartridge.h  config.cpp  config.h  core.cpp  core.h  cp15.cpp  cp15.h  dma.cpp  dma.h  gpu.cpp  gpu.h  gpu_2d.cpp  gpu_2d.h  input.cpp  input.h  interrupt.cpp  interrupt.h  ipc.cpp  ipc.h  maths_unit.cpp  maths_unit.h  memory.cpp  memory.h  rtc.cpp  rtc.h  scheduler.cpp  scheduler.h  spi.cpp  spi.h  spu.cpp  spu.h  system.cpp  system.h  (+5 more)
src/core/GPU/: Renderer2D.h  Renderer3D.h
src/core/arm/: arch.h  arm.cpp  arm.h  arm7.cpp  arm7.h  arm9.cpp  arm9.h  config.h  coprocessor.h  cpu.h  cpu_base.cpp  cpu_base.h  cpu_core.cpp  cpu_core.h  cpu_registers.h  decoder.h  fastmem.h  instructions.h  memory.cpp  memory.h  memory_base.cpp  memory_base.h  mmio.h  state.h  virtual_page_table.h
src/dmg/: CMakeLists.txt  dmg.cpp  dmg.h
src/emulator/: CMakeLists.txt  Emulator.cpp  Emulator.h  emulator.cpp  emulator.h
src/frontend/: CMakeLists.txt  application.cpp  application.h  arm_debugger_window.cpp  arm_debugger_window.h  font_database.h  gl_video_device.cpp  gl_video_device.h  imgui_video_device.cpp  imgui_video_device.h  main.cpp  sdl_audio_device.cpp  sdl_audio_device.h
src/gba/: CMakeLists.txt  arm.cpp  arm.h  cartridge.cpp  cartridge.h  cp14.cpp  cp14.h  gba.cpp  gba.h  gpu.cpp  gpu.h  input.cpp  input.h  memory.cpp  memory.h  mmio.cpp  system.cpp  system.h
src/nds/: CMakeLists.txt  arm.cpp  arm.h  arm_alu.cpp  arm_branch.cpp  arm_transfer.cpp  cartridge.cpp  cartridge.h  cp15.cpp  cp15.h  dma.cpp  dma.h  gpu.cpp  gpu.h  gpu_2d.cpp  gpu_2d.h  input.cpp  input.h  interrupt.cpp  interrupt.h  ipc.cpp  ipc.h  maths_unit.cpp  maths_unit.h  memory.cpp  memory.h  nds.cpp  nds.h  rtc.cpp  rtc.h  scheduler.cpp  scheduler.h  spi.cpp  spi.h  spu.cpp  spu.h  system.cpp  system.h  timers.cpp  timers.h
src/platform_qt/: CMakeLists.txt  emuthread.h  main.cpp  mainwindow.cpp  mainwindow.h
src/platform_sdl/: CMakeLists.txt  host_interface.cpp  host_interface.h  main.cpp
src/util/: CMakeLists.txt  memory_helpers.h
src/yuugen_common/: CMakeLists.txt  audio_interface.h  config.cpp  config.h  emu_thread.cpp  emu_thread.h  emuthread.h
src/yuugen_imgui/: CMakeLists.txt  host_interface.cpp  host_interface.h  main.cpp
src/yuugen_qt/: CMakeLists.txt  audio_settings_window.cpp  audio_settings_window.h  configwindow.cpp  configwindow.h  games_list_model.cpp  games_list_model.h  games_list_widget.cpp  games_list_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  render_widget.cpp  render_widget.h
src/yuugen_sdl/: CMakeLists.txt  audio_interface.cpp  audio_interface.h  host_interface.cpp  host_interface.h  main.cpp
tests/: CMakeLists.txt  main.cpp  test_a64_assembler.cpp  test_cpu_compare.cpp
(+678 files in other folders)
