set(FRONTEND_SDL OFF)
set(FRONTEND_QT ON)
set(FRONTEND_IMGUI OFF)

add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(yuugen_common)
add_subdirectory(audio_common)

if (FRONTEND_SDL)
    add_subdirectory(yuugen_sdl)
elseif(FRONTEND_QT)
    add_subdirectory(yuugen_qt)
elseif(FRONTEND_IMGUI)
    add_subdirectory(yuugen_imgui)
endif()