set(FRONTEND_SDL OFF)
set(FRONTEND_QT OFF)
set(FRONTEND_IMGUI ON)

add_subdirectory(Common)
add_subdirectory(Core)
add_subdirectory(yuugen_common)
add_subdirectory(audio_common)

if (FRONTEND_SDL)
    add_subdirectory(yuugen_sdl)
elseif(FRONTEND_QT)
    add_subdirectory(yuugen_qt)
elseif(FRONTEND_IMGUI)
    add_subdirectory(yuugen_imgui)
endif()